--- a/config.example.yml
+++ b/config.example.yml
@@ -7,4 +7,6 @@ account:
 AlgortihmName:
   currencies:
     - currency_name
-  range_of_values: int
+  range_of_values: int         # length of dataframe gathered from csv
+  timeframe: int               # seconds of timeframe
+  duplicate_protection: int    # n times the timeframe of remove zone
