Added close signals, fixed algo boll_bands_1 and fixed test simulation

--- a/config.example.yml
+++ b/config.example.yml
@@ -5,8 +5,9 @@ account:
 
 # ====== ALGORITHM CONFIGURATION ======
 AlgortihmName:
-  currencies:
+  currencies:                  # currencies to analyse
     - currency_name
   range_of_values: int         # length of dataframe gathered from csv
   timeframe: int               # seconds of timeframe
+  update_freq: int             # timeframe of closing prices, simulating the bot
   duplicate_protection: int    # n times the timeframe of remove zone
