--- a/config.example.yml
+++ b/config.example.yml
@@ -11,3 +11,5 @@ AlgortihmName:
   timeframe: int               # seconds of timeframe
   update_freq: int             # timeframe of closing prices, simulating the bot
   duplicate_protection: int    # n times the timeframe of remove zone
+  stop_loss: null
+  take_profit: null
