--- a/config.example.yml
+++ b/config.example.yml
@@ -1,3 +1,9 @@
+# ====== ENGINE CONFIGURATION ======
+engine:
+    algorithms:
+        - AlgorithmName
+    initial_balance: int
+
 # ====== ACCOUNT CONFIGURATION ======
 account:
   username: username
